--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -1,38 +1,150 @@
-.App {
-  text-align: center;
+.header-color {
+    background: #136a8a; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #267871, #136a8a); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #267871, #136a8a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Landing Page */
+
+
+.landing-grid {
+    background: #136a8a; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #267871, #136a8a); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #267871, #136a8a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    position: fixed;
+    text-align: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.avatar-img {
+    height: 250px;
+    padding-top: 5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.banner-text {
+    background-color: black;
+    opacity: 0.8;
+    width: 75%;
+    margin: auto;
+    border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-text h1 {
+    font-size: 65px;
+    font-weight: bold;
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner-text hr {
+    border-top: 5px dotted white;
+    width: 50%;
+    margin: auto;
+}
+
+.banner-text p {
+    color: white;
+    font-size: 20px;
+    padding: 1em;
+}
+
+.social-links {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin: auto;
+    color: white;
+}
+
+.social-links i {
+    color: white;
+    font-size: 5em;
+    padding: 8px;
+}
+
+/* Contact Page */
+
+
+.contact-body {
+    margin: auto;
+    background: grey;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 2em;
+}
+
+.contact-grid {
+    text-align: center;
+    justify-content: center;
+    width: 80%;
+    height: 550px;
+    background: white;
+    color: black;
+    border: 2px solid red;
+    margin-bottom: 20px;
+}
+
+.contact-grid h2 {
+    font-family: 'Anton';
+    font-weight: bold;
+
+}
+
+.contact-grid p {
+    width: 75%;
+    margin: auto;
+    padding-top: 1em;
+    font-family: 'Oxygen';
+}
+
+
+.contact-grid hr {
+    border-top: 5px dotted black;
+    width: 50%;
+    margin: auto;
+}
+
+.contact-list i {
+    font-size: 66px;
+    padding-right: 5rem;
+}
+
+/* Resume Page */
+
+
+.resume-right-side {
+    padding: 2em;
+    background: #27221F;
+    color: white;
+}
+
+.resume-left-side img {
+    display: block;
+    margin: 0 auto;
+    height: 200px;
+}
+
+.resume-left-side h2 {
+    padding-top: 2em;
+}
+
+.resume-left-side h2 {
+    padding-top: 2em;
+}
+
+.resume-left-side h4 {
+    color: grey;
+}
+
+.resume-left-side hr {
+    border-top: 3px solid #033fb2;
+    width: 45%
+}
+
+.resume-left-side h4 {
+    color: grey;
 }
